--- a/_activities/01a.md
+++ b/_activities/01a.md
@@ -24,7 +24,7 @@ Estos servidores públicos serán encargados de crear y coordinar un Consejo Ins
 * **Enlace de Transparencia**, responsable de velar la normatividad vigente en materia de datos personales o confidenciales y de priorizar la publicación de datos con alta demanda ciudadana.  
 * **Órganos Internos de Control**, responsable de dar seguimiento al cumplimiento de la normatividad vigente en la materia.
 
-### _Actividades a realizar_
+#### _Actividades a realizar_
 
 1. Designar un enlace institucional y un administrador de datos abiertos, enviando un oficio con ambas designaciones a la Estrategia Digital Nacional, siguiendo [esta plantilla](https://docs.google.com/document/d/1zTDpf0oW9ooxo2v1W5nQv5ZHAeFL0ss5_6fvhzeGG9g/edit?usp=sharing).
 2. Formar y reunir al Consejo Institucional de Datos Abiertos para coordinar la implementación de la Política en toda la institución.
