--- a/_activities/01b.md
+++ b/_activities/01b.md
@@ -17,7 +17,7 @@ El inventario general de datos será construido de manera gradual, apuntando a q
 
 Para su conformación, las áreas responsables de generar o administrar datos deberán reportar estos datos al Administrador, quien será responsable de consolidar la información en un solo listado.
 
-### _Actividades a realizar_
+#### _Actividades a realizar_
 
 1. Pedir un [inventario general de datos](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing) a todas las áreas responsables de generar o administrar datos y consolidar información en un solo listado, siguiendo [este formato](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing).
 
