--- a/_activities/01c.md
+++ b/_activities/01c.md
@@ -21,7 +21,7 @@ Para la priorización, se deberán seguir los siguientes pasos:
 4. Cumplir con los objetivos del Plan Nacional de Desarrollo, y apoyar el cumplimiento de los objetivos, políticas y programas relevantes de la dependencia o entidad.
 5. Analizar los Datos Abiertos del sector que han sido publicados por otras iniciativas internacionales. 
 
-### _Actividades a realizar_
+#### _Actividades a realizar_
 
 1. Utilizar el modelo de [Infraestructura Estratégica de Datos](https://docs.google.com/presentation/d/1aSHpv08XNrdc_oxzyoY7wS23yYwxGIDeaqF7sFQoKiU/edit#slide=id.g4a4fba72d_050) para conocer que atribuciones dan más valor a los datos, y los conjuntos de datos que deberán ser publicados primero.
 2. Solicitar a la Unidad de Transparencia un reporte de las solicitudes de acceso a la información pública más recurrentes para que sean incluidas en la primera publicación.
