--- a/_activities/02a.md
+++ b/_activities/02a.md
@@ -45,7 +45,7 @@ Es importante asegurar la calidad del archivo exportado para no mermar el uso po
 * Evitando la definición de rangos numéricos arbitrarios, p. ej. “0-5”, “6-10”, “+25”. Se debe optar por la adopción de rangos definidos por estándares del sector o industria (como ISO 8601 y WHO), p. ej. usando quinquenios.
 
 
-### _Actividades a realizar_
+#### _Actividades a realizar_
 
 1. Exportar los datos a archivos estáticos tabulares.
 2. Convertir los archivos a formatos abiertos [CSV](http://es.wikipedia.org/wiki/CSV).
