--- a/_activities/02b.md
+++ b/_activities/02b.md
@@ -19,7 +19,7 @@ Cada conjunto de datos debe estar disponible para descargar individualmente medi
 
 La importancia de lo anterior es que estas ligas serán utilizadas posteriormente para referenciar los conjuntos de datos en [www.datos.gob.mx](http://www.datos.gob.mx)
 
-### _Actividades a realizar_
+#### _Actividades a realizar_
 
 1. Habilitar los conjuntos de datos para que estén disponibles directamente para descarga en www.institución.gob.mx/datos.
 
