--- a/_activities/02c.md
+++ b/_activities/02c.md
@@ -17,7 +17,7 @@ Todas estas descripciones se capturan dentro de los metadatos del estándar DCAT
 
 El producto final será un catálogo en formato tabular CSV con la documentación de todos los conjuntos de datos a publicar.
 
-### _Actividades a realizar_
+#### _Actividades a realizar_
 
 1. Seguir la guía para documentar metadatos usando DCAT. Disponible en [bit.ly/catalogo-de-datos-v2](http://bit.ly/catalogo-de-datos-v2).
 
