--- a/_activities/02d.md
+++ b/_activities/02d.md
@@ -19,7 +19,7 @@ Las mejores prácticas de la comunidad internacional de Datos Abiertos, apuntan 
 
 En [datos.gob.mx](http://datos.gob.mx/) se concentra una gran variedad de conjuntos de datos de diferentes dependencias, entidades y gobiernos locales, para facilitar la búsqueda y uso al ciudadano. Al publicar en [datos.gob.mx](http://datos.gob.mx/) la institución se suma a la Política de Datos Abiertos.
 
-### _Actividades a realizar_
+#### _Actividades a realizar_
 
 1. Pedir acceso en [ADELA](http://adela.datos.gob.mx/) escribiendo a: adela@datos.gob.mx. Este correo tendrá como respuesta un nombre de usuario y contraseña para acceder a la aplicación web.
 2. Subir el catálogo de datos y revisar que esté reflejado en [datos.gob.mx](http://datos.gob.mx/).
