--- a/_activities/03a.md
+++ b/_activities/03a.md
@@ -19,7 +19,7 @@ El cumplimiento con los requerimientos de esta guía será verificado por las un
 
 De manera anual, la Coordinación de Estrategia Digital Nacional enviará un reporte con los datos y avances más destacados en materia de Datos Abiertos al titular de la dependencia o entidad.
 
-### _Actividades a realizar_
+#### _Actividades a realizar_
 
 1. Revisar el tablero de control en [ADELA](http://adela.datos.gob.mx/).
 2. Atender a las recomendaciones realizadas por el Órgano Interno de Control, usuarios, Coordinación de Estrategia  Digital Nacional.
