--- a/_activities/04a.md
+++ b/_activities/04a.md
@@ -29,7 +29,7 @@ Además, existen diversas metodologías y herramientas tecnológicas para llevar
 * **Datos para el Desarrollo** modelo de colaboración con instituciones académicas para el análisis de causas sociales basado en ciencias de procesamiento avanzado de datos 
 * **Encuestas públicas**, herramienta digital de encuestas para identificar la demanda ciudadana y uso potencial de los datos de tu institución.
 
-### _Actividades a realizar_
+#### _Actividades a realizar_
 
 1. Documentar y publicar ‘historias’ de éxito en [datos.gob.mx](http://datos.gob.mx/)
 2. Utilizar las secciones de herramientas y apps en datos.gob.mx, para promocionar el uso y aprovechamiento de tu catálogo de Datos Abiertos; 
