--- a/_activities/01c.md
+++ b/_activities/01c.md
@@ -5,7 +5,7 @@ title: Priorizar los datos de valor
 published: true
 ---
 
-_**Involucrados:** Enlace de Datos Abiertos; áreas generadoras o administradoras de datos; enlace de transparencia.
+**Involucrados:** Enlace de Datos Abiertos; áreas generadoras o administradoras de datos; enlace de transparencia.
 
 **Tiempo máximo para el cumplimiento:** 60 días
 
