--- a/_activities/01b.md
+++ b/_activities/01b.md
@@ -7,9 +7,9 @@ published: true
 
 _**Involucrados:** Enlace de Datos Abiertos; Administrador de Datos Abiertos; áreas generadoras o administradoras de datos; enlace de transparencia; Organos Internos de Control.
 
-**Tiempo máximo para el cumplimiento:** 60 días
+_**Tiempo máximo para el cumplimiento:** 60 días_
 
-**Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos; Índice de Datos Abiertos del PGcyM._
+_**Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos; Índice de Datos Abiertos del PGcyM._
 
 El inventario general de datos es un ejercicio de transparencia y rendición de cuentas que permite a los ciudadanos saber cuáles son los datos que genera y administra cada institución.
 
