--- a/_activities/01a.md
+++ b/_activities/01a.md
@@ -5,11 +5,11 @@ title: Formar un equipo de trabajo
 published: true
 ---
 
-_**Involucrados:** Coordinación de asesores del titular de la dependencia; Dirección General de Tecnologías de Información y homólogo; áreas generadoras o administradoras de datos; enlace de transparencia; Organos Internos de Control.
+**Involucrados:** Coordinación de asesores del titular de la dependencia; Dirección General de Tecnologías de Información y homólogo; áreas generadoras o administradoras de datos; enlace de transparencia; Organos Internos de Control.
 
 **Tiempo máximo para el cumplimiento:** 30 días
 
-**Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos; Índice de Datos Abiertos del PGcyM._
+**Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos; Índice de Datos Abiertos del PGcyM.
 
 El titular de la dependencia o entidad designará a dos funcionarios responsables de dar cumplimiento al Decreto de Datos Abiertos:
 
