--- a/_activities/01a.md
+++ b/_activities/01a.md
@@ -13,8 +13,8 @@ published: true
 
 El titular de la dependencia o entidad designará a dos funcionarios responsables de dar cumplimiento al Decreto de Datos Abiertos:
 
-1. El Enlace Institucional será el coordinador de Asesores del Titular de la institución u homólogo, y será responsable de coordinar las acciones para cumplir con la Política de Datos Abiertos, así como de la priorización de los mismos.
-2. El Administrador de Datos será el Director General de Tecnologías de la Información  u homólogo, y será responsable de coordinar la creación del [Inventario de Datos](http://mxabierto.github.io/guia/#play2) e implementar los procesos para que los datos se publiquen en el sitio institucional y posteriormente se vean reflejados en [datos.gob.mx](http://datos.gob.mx/).
+- El Enlace Institucional será el coordinador de Asesores del Titular de la institución u homólogo, y será responsable de coordinar las acciones para cumplir con la Política de Datos Abiertos, así como de la priorización de los mismos.
+- El Administrador de Datos será el Director General de Tecnologías de la Información  u homólogo, y será responsable de coordinar la creación del [Inventario de Datos](http://mxabierto.github.io/guia/#play2) e implementar los procesos para que los datos se publiquen en el sitio institucional y posteriormente se vean reflejados en [datos.gob.mx](http://datos.gob.mx/).
 
 Estos servidores públicos serán encargados de crear y coordinar un Consejo Institucional de Datos Abiertos, que será compuesto como mínimo, por las siguientes áreas:
 
