--- a/_activities/01b.md
+++ b/_activities/01b.md
@@ -5,11 +5,11 @@ title: Crear un inventario general de datos
 published: true
 ---
 
-_**Involucrados:** Enlace de Datos Abiertos; Administrador de Datos Abiertos; áreas generadoras o administradoras de datos; enlace de transparencia; Organos Internos de Control.
+**Involucrados:** Enlace de Datos Abiertos; Administrador de Datos Abiertos; áreas generadoras o administradoras de datos; enlace de transparencia; Organos Internos de Control.
 
 _**Tiempo máximo para el cumplimiento:** 60 días_
 
-_**Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos; Índice de Datos Abiertos del PGcyM._
+_**Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos; Índice de Datos Abiertos del PGcyM.
 
 El inventario general de datos es un ejercicio de transparencia y rendición de cuentas que permite a los ciudadanos saber cuáles son los datos que genera y administra cada institución.
 
