--- a/_activities/01c.md
+++ b/_activities/01c.md
@@ -13,11 +13,12 @@ published: true
 
 La priorización de datos permite planear conocer cuáles son los datos de más valor para iniciar su publicación como Datos Abiertos. 
 
+Es recomendable iniciar con datos que ya son públicos y tienen la calidad necesaria, para gradualmente publicar aquellos que aún no son accesibles para la población en general.
+
 #### _Actividades a realizar_
 
-1. Iniciar con datos que ya son públicos y tienen la calidad necesaria, para gradualmente publicar aquellos que aún no son accesibles para la población en general.
-2. Utilizar el modelo de [Infraestructura Estratégica de Datos](https://docs.google.com/presentation/d/1aSHpv08XNrdc_oxzyoY7wS23yYwxGIDeaqF7sFQoKiU/edit#slide=id.g4a4fba72d_050) para conocer que atribuciones dan más valor a los datos, y los conjuntos de datos que deberán ser publicados primero.
-3. Solicitar a la Unidad de Transparencia un reporte de las solicitudes de acceso a la información pública recurrentes para que sean incluidas.
-4. Sesionar el Consejo Institucional de Datos Abiertos para priorizar los datos del Inventario General según los objetivos de la institución y el Plan Nacional de Desarrollo.
-5. Analizar los Datos Abiertos del sector que han sido publicados por otras iniciativas internacionales.
-6. Publicar el Plan de Apertura Institucional con los los pasos anteriores.
+1. Utilizar el modelo de [Infraestructura Estratégica de Datos](https://docs.google.com/presentation/d/1aSHpv08XNrdc_oxzyoY7wS23yYwxGIDeaqF7sFQoKiU/edit#slide=id.g4a4fba72d_050) para conocer que atribuciones dan más valor a los datos, y los conjuntos de datos que deberán ser publicados primero.
+2. Solicitar a la Unidad de Transparencia un reporte de las solicitudes de acceso a la información pública recurrentes para que sean incluidas.
+3. Sesionar el Consejo Institucional de Datos Abiertos para priorizar los datos del Inventario General según los objetivos de la institución y el Plan Nacional de Desarrollo.
+4. Analizar los Datos Abiertos del sector que han sido publicados por otras iniciativas internacionales.
+5. Publicar el Plan de Apertura Institucional con los los pasos anteriores.
