--- a/_activities/02a.md
+++ b/_activities/02a.md
@@ -11,11 +11,11 @@ published: true
 
 **Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos; Índice de Datos Abiertos del PGcyM.
 
-Es importante estandarizar la manera en que los datos serán utilizados y consumidos por el propio gobierno y el público en general. Al exportar los conjuntos a formatos tabulares, se facilita el consumo e interpretación de la información por terceros con diferentes sistemas, tecnologías y áreas de conocimiento.
+Es importante estandarizar la manera en que los datos serán utilizados y consumidos por el gobierno y el público en general. Al exportar los conjuntos a formatos tabulares, se facilita el consumo e interpretación de la información por terceros con diferentes sistemas, tecnologías y áreas de conocimiento.
 
-De igual manera, es fundamental satisfacer la demanda de la mayor audiencia posible. Al utilizar formatos abiertos, se extiende la audiencia de usuarios que pueden aprovechar los datos, ya que los formatos abiertos son universalmente soportados por la mayoría de los sistemas computacionales.
+Al utilizar formatos abiertos, se extiende la audiencia de usuarios que pueden aprovechar los datos, ya que los formatos abiertos son universalmente soportados por la mayoría de los sistemas computacionales.
 
-Por estándar y en lo posible, los datos se deberán publicar en formatos tabulares CSV. Sin embargo, para atender la diversidad de audiencias, sectores y casos de uso, se fomentará la publicación de los mismos conjuntos en diferentes formatos de estándar abierto que resultan convenientes, como lo son TXT, XML, JSON, RDF, HTML, GeoJSON, KML, e inclusive propietarios como SHP y XLSX.
+Por estándar y en lo posible, los datos se deberán publicar en formatos tabulares CSV. Sin embargo, para atender la diversidad de audiencias, se recomienda la publicación de los mismos conjuntos en los formatos que resulten convenientes para el usuario, como lo son TXT, XML, JSON, RDF, HTML, GeoJSON, KML, e inclusive propietarios como SHP y XLSX.
 
 Es importante asegurar la calidad del archivo exportado para no mermar el uso por terceros. Esto se puede lograr siguiendo buenas prácticas como:
 
@@ -50,4 +50,3 @@ Es importante asegurar la calidad del archivo exportado para no mermar el uso po
 1. Exportar los datos a archivos estáticos tabulares.
 2. Convertir los archivos a formatos abiertos [CSV](http://es.wikipedia.org/wiki/CSV).
 3. Asegurar la validez del formato y estructura del archivo.
-
