--- a/_activities/02c.md
+++ b/_activities/02c.md
@@ -11,7 +11,7 @@ published: true
 
 **Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos
 
-Utilizar datos no debería ser confuso para el usuario. Es importante explicar de dónde vienen los datos y compartir referencias adicionales para entender a fondo el origen de éstos.
+Utilizar datos no debe ser confuso para el usuario. Es importante explicar de dónde vienen los datos y compartir referencias adicionales para entender a fondo el origen de éstos.
 
 Todas estas descripciones se capturan dentro de los metadatos del estándar DCAT, para cada uno de los conjuntos que serán publicados como Datos Abiertos.
 
@@ -20,4 +20,3 @@ El producto final será un catálogo en formato tabular CSV con la documentació
 #### _Actividades a realizar_
 
 1. Seguir la guía para documentar metadatos usando DCAT. Disponible en [bit.ly/catalogo-de-datos-v2](http://bit.ly/catalogo-de-datos-v2).
-
