--- a/_activities/02d.md
+++ b/_activities/02d.md
@@ -11,11 +11,9 @@ published: true
 
 **Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos
 
-El catálogo generado en el paso anterior se cargará en [ADELA](http://adela.datos.gob.mx/). ADELA tiene dos funciones básicas, facilitar el proceso de apertura de datos y transparentar su seguimiento (los lineamientos a fondo sobre cómo funciona ADELA y cómo realizar estos pasos se pueden encontrar en [este link](https://github.com/mxabierto/adela/wiki/Gu%C3%ADa-de-uso-para-el-funcionario)).
+El catálogo generado en el paso anterior se cargará en [ADELA](http://adela.datos.gob.mx/), que cumple con dos funciones básicas, facilitar el proceso de apertura de datos y transparentar su seguimiento (los lineamientos a fondo sobre cómo funciona ADELA y cómo realizar estos pasos se pueden encontrar en [este link](https://github.com/mxabierto/adela/wiki/Gu%C3%ADa-de-uso-para-el-funcionario)).
 
-Al cargar el catálogo de datos de la institución en formato CSV, se traducirá automáticamente al estándar DCAT en formato JSON y los conjuntos de datos aparecerán en datos.gob.mx. Además se registrará un histórico de catálogos, y se proveerá de ayuda a los funcionarios responsables de administrar el proceso de apertura.
-
-Las mejores prácticas de la comunidad internacional de Datos Abiertos, apuntan a que un catálogo central de datos abiertos es la mejor opción para los ciudadanos. 
+Al cargar el catálogo de datos de la institución en formato CSV, se traducirá automáticamente al estándar DCAT, en formato JSON, y los conjuntos de datos aparecerán en datos.gob.mx. Además se registrará un histórico de catálogos, y se proveerá de ayuda a los funcionarios responsables de administrar el proceso de apertura.
 
 En [datos.gob.mx](http://datos.gob.mx/) se concentra una gran variedad de conjuntos de datos de diferentes dependencias, entidades y gobiernos locales, para facilitar la búsqueda y uso al ciudadano. Al publicar en [datos.gob.mx](http://datos.gob.mx/) la institución se suma a la Política de Datos Abiertos.
 
