--- a/_activities/04a.md
+++ b/_activities/04a.md
@@ -13,13 +13,11 @@ published: true
 
 Para generar valor, es necesario generar acciones para difundir la publicación y promover el uso de los Datos Abiertos. El sitio datos.gob.mx contará con una secciónes específicas para ayudar a las instituciones a socializar y facilitar el uso de sus datos: 
 
-* ‘Historias’, dará a conocer de manera ciudadana contenido editorial sobre conjuntos de Datos Abiertos específicos y su valor público mediante casos aplicados.
-* ‘Apps’, plataforma que consolida y facilitará la descarga de las aplicaciones desarrolladas relacionados con Datos Abiertos del Gobierno de la República;
-* ‘Herramientas’, contendrá distintas visualizaciones de datos ciudadanas con funcionalidades como mapas, gráficas y tablas interactivas para explorar los datos en formatos fáciles de comprender.
-* ‘Foros’
-* ‘Comentarios’
+* ‘Historias’, da a conocer de manera ciudadana contenido editorial sobre conjuntos de Datos Abiertos específicos y su valor público mediante casos aplicados.
+* ‘Apps’, consolida y facilitará la descarga de las aplicaciones desarrolladas relacionados con Datos Abiertos del Gobierno de la República;
+* ‘Herramientas’, contiene distintas visualizaciones de datos ciudadanas con funcionalidades como mapas, gráficas y tablas interactivas para explorar los datos en formatos fáciles de comprender.
 
-Estas funcionalidades facilitarán el uso de los Datos Abiertos para los ciudadanos, al tiempo que permitirá que las instituciones ahorren recursos, fomentando un solo desarrollo tecnológico, interoperable y reutilizable para toda la Administración Pública Federal.
+Estas funcionalidades facilitan el uso de los Datos Abiertos para los ciudadanos, al tiempo que permiten que las instituciones ahorren recursos, al fomentar un solo desarrollo tecnológico, interoperable y reutilizable para toda la Administración Pública Federal.
 
 Además, existen diversas metodologías y herramientas tecnológicas para llevar a cabo acciones que fomenten el uso de Datos Abiertos, como:
 
@@ -32,7 +30,6 @@ Además, existen diversas metodologías y herramientas tecnológicas para llevar
 #### _Actividades a realizar_
 
 1. Documentar y publicar ‘historias’ de éxito en [datos.gob.mx](http://datos.gob.mx/)
-2. Utilizar las secciones de herramientas y apps en datos.gob.mx, para promocionar el uso y aprovechamiento de tu catálogo de Datos Abiertos; 
+2. Utilizar las secciones de herramientas y apps en datos.gob.mx, para promocionar el uso de los Datos Abiertos de la institución; 
 3. Organizar acciones de vinculación, participación y socialización de Datos Abiertos utilizando las metodologías aquí descritas.
 4. Responder a los usuarios que utilicen los canales de comunicación de datos.gob.mx (como por ejemplo foro o seccion de comentarios en cada conjunto), sobre las razones, tiempo o posibilidad de publicar un conjunto de datos, o sobre la calidad y significado de los datos publicados.
-
