Dejé una referencia al inventario, para que no fuera confuso

--- a/_activities/01b.md
+++ b/_activities/01b.md
@@ -9,7 +9,7 @@ published: true
 
 _**Tiempo máximo para el cumplimiento:** 60 días_
 
-_**Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos; Índice de Datos Abiertos del PGcyM.
+**Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos; Índice de Datos Abiertos del PGcyM.
 
 El inventario general de datos es un ejercicio de transparencia y rendición de cuentas que permite a los ciudadanos saber cuáles son los datos que genera y administra cada institución.
 
@@ -19,4 +19,4 @@ Para su conformación, las áreas responsables de generar o administrar datos de
 
 #### _Actividades a realizar_
 
-1. Pedir un [inventario general de datos](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing) a todas las áreas responsables de generar o administrar datos y consolidar información en un solo listado, siguiendo [este formato](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing).
+1. Pedir un inventario general de datos a todas las áreas responsables de generar o administrar datos y consolidar información en un solo listado, siguiendo [este formato](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing).
