--- a/_activities/01c.md
+++ b/_activities/01c.md
@@ -17,7 +17,7 @@ Es recomendable iniciar con datos que ya son públicos y tienen la calidad neces
 
 #### _Actividades a realizar_
 
-1. Utilizar el modelo de [Infraestructura Estratégica de Datos](https://docs.google.com/presentation/d/1aSHpv08XNrdc_oxzyoY7wS23yYwxGIDeaqF7sFQoKiU/edit#slide=id.g4a4fba72d_050) para conocer que atribuciones dan más valor a los datos, y los conjuntos de datos que deberán ser publicados primero.
+1. Utilizar el modelo de [Infraestructura Estratégica de Datos Abiertos](https://docs.google.com/presentation/d/1aSHpv08XNrdc_oxzyoY7wS23yYwxGIDeaqF7sFQoKiU/edit#slide=id.g4a4fba72d_050) para conocer que atribuciones dan más valor a los datos, y los conjuntos de datos que deberán ser publicados primero.
 2. Solicitar a la Unidad de Transparencia un reporte de las solicitudes de acceso a la información pública recurrentes para que sean incluidas.
 3. Sesionar el Consejo Institucional de Datos Abiertos para priorizar los datos del Inventario General según los objetivos de la institución y el Plan Nacional de Desarrollo.
 4. Analizar los Datos Abiertos del sector que han sido publicados por otras iniciativas internacionales.
