Agregué el link al modelo de plan de apertura

--- a/_activities/01c.md
+++ b/_activities/01c.md
@@ -21,4 +21,4 @@ Es recomendable iniciar con datos que ya son públicos y tienen la calidad neces
 2. Solicitar a la Unidad de Transparencia un reporte de las solicitudes de acceso a la información pública recurrentes para que sean incluidas.
 3. Sesionar el Consejo Institucional de Datos Abiertos para priorizar los datos del Inventario General según los objetivos de la institución y el Plan Nacional de Desarrollo.
 4. Analizar los Datos Abiertos del sector que han sido publicados por otras iniciativas internacionales.
-5. Publicar el Plan de Apertura Institucional con los los pasos anteriores.
+5. Publicar el Plan de Apertura Institucional usando [este formato](https://docs.google.com/spreadsheets/d/1_M3Xd2gy0T2pWXvqQlkwWXp8Ymr2hb6VXT-sMdlwIlo/edit#gid=0).
